--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -2151,12 +2151,48 @@ input[type="submit"].button {
   border-color: #b5b5b5;
 }
 
-.select select::ms-expand {
+.select select::-ms-expand {
   display: none;
 }
 
 .select:hover:after {
   border-color: #363636;
+}
+
+.select.is-white select {
+  border-color: white;
+}
+
+.select.is-black select {
+  border-color: #0a0a0a;
+}
+
+.select.is-light select {
+  border-color: whitesmoke;
+}
+
+.select.is-dark select {
+  border-color: #363636;
+}
+
+.select.is-primary select {
+  border-color: #00d1b2;
+}
+
+.select.is-info select {
+  border-color: #3273dc;
+}
+
+.select.is-success select {
+  border-color: #23d160;
+}
+
+.select.is-warning select {
+  border-color: #ffdd57;
+}
+
+.select.is-danger select {
+  border-color: #ff3860;
 }
 
 .select.is-small {
