--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -1666,11 +1666,9 @@ a.box:active {
   height: 1em;
   position: relative;
   width: 1em;
-  left: 50%;
-  margin-left: -0.5em;
-  margin-top: -0.5em;
   position: absolute;
-  top: 50%;
+  left: calc(50% - (1em / 2));
+  top: calc(50% - (1em / 2));
   position: absolute !important;
 }
 
