--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -1692,9 +1692,11 @@ input[type="submit"].button {
 }
 
 .content p:not(:last-child),
+.content dl:not(:last-child),
 .content ol:not(:last-child),
 .content ul:not(:last-child),
 .content blockquote:not(:last-child),
+.content pre:not(:last-child),
 .content table:not(:last-child) {
   margin-bottom: 1em;
 }
@@ -1779,6 +1781,18 @@ input[type="submit"].button {
 
 .content ul ul ul {
   list-style-type: square;
+}
+
+.content dd {
+  margin-left: 2em;
+}
+
+.content pre {
+  -webkit-overflow-scrolling: touch;
+  overflow-x: auto;
+  padding: 1.25em 1.5em;
+  white-space: pre;
+  word-wrap: normal;
 }
 
 .content table {
