--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -6205,6 +6205,13 @@ label.panel-block:hover {
 }
 
 @media screen and (max-width: 768px) {
+  .hero.is-white.is-bold .nav-menu {
+    background-image: -webkit-linear-gradient(309deg, #e6e6e6 0%, white 71%, white 100%);
+    background-image: linear-gradient(141deg, #e6e6e6 0%, white 71%, white 100%);
+  }
+}
+
+@media screen and (max-width: 768px) {
   .hero.is-white .nav-toggle span {
     background-color: #0a0a0a;
   }
@@ -6293,6 +6300,13 @@ label.panel-block:hover {
 .hero.is-black.is-bold {
   background-image: -webkit-linear-gradient(309deg, black 0%, #0a0a0a 71%, #181616 100%);
   background-image: linear-gradient(141deg, black 0%, #0a0a0a 71%, #181616 100%);
+}
+
+@media screen and (max-width: 768px) {
+  .hero.is-black.is-bold .nav-menu {
+    background-image: -webkit-linear-gradient(309deg, black 0%, #0a0a0a 71%, #181616 100%);
+    background-image: linear-gradient(141deg, black 0%, #0a0a0a 71%, #181616 100%);
+  }
 }
 
 @media screen and (max-width: 768px) {
@@ -6387,6 +6401,13 @@ label.panel-block:hover {
 }
 
 @media screen and (max-width: 768px) {
+  .hero.is-light.is-bold .nav-menu {
+    background-image: -webkit-linear-gradient(309deg, #dfd8d8 0%, whitesmoke 71%, white 100%);
+    background-image: linear-gradient(141deg, #dfd8d8 0%, whitesmoke 71%, white 100%);
+  }
+}
+
+@media screen and (max-width: 768px) {
   .hero.is-light .nav-toggle span {
     background-color: #363636;
   }
@@ -6475,6 +6496,13 @@ label.panel-block:hover {
 .hero.is-dark.is-bold {
   background-image: -webkit-linear-gradient(309deg, #1f1919 0%, #363636 71%, #463f3f 100%);
   background-image: linear-gradient(141deg, #1f1919 0%, #363636 71%, #463f3f 100%);
+}
+
+@media screen and (max-width: 768px) {
+  .hero.is-dark.is-bold .nav-menu {
+    background-image: -webkit-linear-gradient(309deg, #1f1919 0%, #363636 71%, #463f3f 100%);
+    background-image: linear-gradient(141deg, #1f1919 0%, #363636 71%, #463f3f 100%);
+  }
 }
 
 @media screen and (max-width: 768px) {
@@ -6569,6 +6597,13 @@ label.panel-block:hover {
 }
 
 @media screen and (max-width: 768px) {
+  .hero.is-primary.is-bold .nav-menu {
+    background-image: -webkit-linear-gradient(309deg, #009e6c 0%, #00d1b2 71%, #00e7eb 100%);
+    background-image: linear-gradient(141deg, #009e6c 0%, #00d1b2 71%, #00e7eb 100%);
+  }
+}
+
+@media screen and (max-width: 768px) {
   .hero.is-primary .nav-toggle span {
     background-color: #fff;
   }
@@ -6657,6 +6692,13 @@ label.panel-block:hover {
 .hero.is-info.is-bold {
   background-image: -webkit-linear-gradient(309deg, #1577c6 0%, #3273dc 71%, #4366e5 100%);
   background-image: linear-gradient(141deg, #1577c6 0%, #3273dc 71%, #4366e5 100%);
+}
+
+@media screen and (max-width: 768px) {
+  .hero.is-info.is-bold .nav-menu {
+    background-image: -webkit-linear-gradient(309deg, #1577c6 0%, #3273dc 71%, #4366e5 100%);
+    background-image: linear-gradient(141deg, #1577c6 0%, #3273dc 71%, #4366e5 100%);
+  }
 }
 
 @media screen and (max-width: 768px) {
@@ -6751,6 +6793,13 @@ label.panel-block:hover {
 }
 
 @media screen and (max-width: 768px) {
+  .hero.is-success.is-bold .nav-menu {
+    background-image: -webkit-linear-gradient(309deg, #12af2f 0%, #23d160 71%, #2ce28a 100%);
+    background-image: linear-gradient(141deg, #12af2f 0%, #23d160 71%, #2ce28a 100%);
+  }
+}
+
+@media screen and (max-width: 768px) {
   .hero.is-success .nav-toggle span {
     background-color: #fff;
   }
@@ -6842,6 +6891,13 @@ label.panel-block:hover {
 }
 
 @media screen and (max-width: 768px) {
+  .hero.is-warning.is-bold .nav-menu {
+    background-image: -webkit-linear-gradient(309deg, #ffaf24 0%, #ffdd57 71%, #fffa70 100%);
+    background-image: linear-gradient(141deg, #ffaf24 0%, #ffdd57 71%, #fffa70 100%);
+  }
+}
+
+@media screen and (max-width: 768px) {
   .hero.is-warning .nav-toggle span {
     background-color: rgba(0, 0, 0, 0.7);
   }
@@ -6930,6 +6986,13 @@ label.panel-block:hover {
 .hero.is-danger.is-bold {
   background-image: -webkit-linear-gradient(309deg, #ff0561 0%, #ff3860 71%, #ff5257 100%);
   background-image: linear-gradient(141deg, #ff0561 0%, #ff3860 71%, #ff5257 100%);
+}
+
+@media screen and (max-width: 768px) {
+  .hero.is-danger.is-bold .nav-menu {
+    background-image: -webkit-linear-gradient(309deg, #ff0561 0%, #ff3860 71%, #ff5257 100%);
+    background-image: linear-gradient(141deg, #ff0561 0%, #ff3860 71%, #ff5257 100%);
+  }
 }
 
 @media screen and (max-width: 768px) {
