--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -4618,6 +4618,108 @@ label.panel-block:hover {
   font-size: 1.5rem;
 }
 
+.breadcrumb-item {
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-flex: 0;
+      -ms-flex-positive: 0;
+          flex-grow: 0;
+  -ms-flex-negative: 0;
+      flex-shrink: 0;
+  line-height: 1.5;
+  padding: 0.5em 0.375em;
+  white-space: nowrap;
+  color: #7a7a7a;
+}
+
+.breadcrumb-item a {
+  color: #7a7a7a;
+}
+
+.breadcrumb-item a:hover {
+  color: #363636;
+}
+
+.breadcrumb-item .icon:first-child {
+  margin-right: 0.5em;
+}
+
+.breadcrumb-item .icon:last-child {
+  margin-left: 0.5em;
+}
+
+.breadcrumb-item:hover {
+  color: #363636;
+}
+
+.breadcrumb-item + .breadcrumb-item:before {
+  color: #4a4a4a;
+  content: '\0002f';
+  padding-right: 0.75em;
+}
+
+.breadcrumb-item.is-active, .breadcrumb-item .is-active {
+  color: #363636;
+  cursor: default;
+  pointer-events: none;
+}
+
+.breadcrumb {
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-flex: 0;
+      -ms-flex-positive: 0;
+          flex-grow: 0;
+  -ms-flex-negative: 1;
+      flex-shrink: 1;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  font-size: 1rem;
+  list-style: none;
+}
+
+.breadcrumb.is-small {
+  font-size: 0.75rem;
+}
+
+.breadcrumb.is-medium {
+  font-size: 1.25rem;
+}
+
+.breadcrumb.is-large {
+  font-size: 1.5rem;
+}
+
+.breadcrumb.has-arrow-separator .breadcrumb-item + .breadcrumb-item:before {
+  content: '\02192';
+}
+
+.breadcrumb.has-bullet-separator .breadcrumb-item + .breadcrumb-item:before {
+  content: '\02022';
+}
+
+.breadcrumb.has-dot-separator .breadcrumb-item + .breadcrumb-item:before {
+  content: '\000b7';
+}
+
+.breadcrumb.has-succeeds-separator .breadcrumb-item + .breadcrumb-item:before {
+  content: '\0227B';
+}
+
+.breadcrumb.is-right {
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+}
+
 .column {
   display: block;
   -ms-flex-preferred-size: 0;
