--- a/docs/documentation/components/breadcrumb.html
+++ b/docs/documentation/components/breadcrumb.html
@@ -14,29 +14,21 @@ doc-subtab: breadcrumb
         <hr>
 
         <div class="content">
-            <p>The <strong>breadcrumb</strong> component consists of two elements:</p>
-            <ul>
-                <li>
-                    <code>breadcrumb</code>: the main container
-                    <ul>
-                        <li>
-                            <code>breadcrumb-item</code>: a repeatable list item
-                        </li>
-                    </ul>
-                </li>
-            </ul>
-            <p>The breadcrumb dividers are created automatically in the <code>::before</code> pseudo-element's content of <code>breadcrumb-item</code> elements</p>
-            <p>You can inform the current page using the <code>is-active</code> modifier in a <code>breadcrumb-item</code> element. It will disable the navigation of this item.</p>
+            <p>The <strong>breadcrumb</strong> component only requires a <code>.breadcrumb</code> container and a <code>ul</code> list.</p>
+            <p>The dividers are automatically created in the content of the <code>::before</code> pseudo-element of <code>li</code> tags.</p>
+            <p>You can inform the current page using the <code>is-active</code> modifier in a <code>li</code> tag. It will disable the navigation of inner links.</p>
         </div>
 
         <hr>
 
 {% capture breadcrumb_example %}
 <nav class="breadcrumb">
-    <a class="breadcrumb-item">Bulma</a>
-    <a class="breadcrumb-item">Documentation</a>
-    <a class="breadcrumb-item">Components</a>
-    <span class="breadcrumb-item is-active">Breadcrumb</span>
+    <ul>
+        <li><a>Bulma</a></li>
+        <li><a>Documentation</a></li>
+        <li><a>Components</a></li>
+        <li class="is-active"><a>Breadcrumb</a></li>
+    </ul>
 </nav>
 {% endcapture %}
 <div class="example">
@@ -50,15 +42,34 @@ doc-subtab: breadcrumb
 
 <h3 class="title">Alignment</h3>
 <div class="content">
-    <p>To align the breadcrumb items to the right, use the <code>is-right</code> modifier on the <code>.breadcrumb</code> container.</p>
+    <p>For alternative alignments, use the <code>is-centered</code> and <code>is-right</code> modifiers on the <code>.breadcrumb</code> container.</p>
 </div>
+
+{% capture breadcrumb_centered_example %}
+<nav class="breadcrumb is-centered">
+    <ul>
+        <li><a>Bulma</a></li>
+        <li><a>Documentation</a></li>
+        <li><a>Components</a></li>
+        <li class="is-active"><a>Breadcrumb</a></li>
+    </ul>
+</nav>
+{% endcapture %}
+<div class="example">
+{{breadcrumb_centered_example}}
+</div>
+{% highlight html %}
+{{breadcrumb_centered_example}}
+{% endhighlight %}
 
 {% capture breadcrumb_right_example %}
 <nav class="breadcrumb is-right">
-    <a class="breadcrumb-item">Bulma</a>
-    <a class="breadcrumb-item">Documentation</a>
-    <a class="breadcrumb-item">Components</a>
-    <span class="breadcrumb-item is-active">Breadcrumb</span>
+    <ul>
+        <li><a>Bulma</a></li>
+        <li><a>Documentation</a></li>
+        <li><a>Components</a></li>
+        <li class="is-active"><a>Breadcrumb</a></li>
+    </ul>
 </nav>
 {% endcapture %}
 <div class="example">
@@ -77,10 +88,12 @@ doc-subtab: breadcrumb
 
 {% capture breadcrumb_icons_example %}
 <nav class="breadcrumb">
-    <a class="breadcrumb-item"><span class="icon is-small"><i class="fa fa-home"></i></span><span>Bulma</span></a>
-    <a class="breadcrumb-item"><span class="icon is-small"><i class="fa fa-file-text"></i></span><span>Documentation</span></a>
-    <a class="breadcrumb-item"><span class="icon is-small"><i class="fa fa-puzzle-piece"></i></span><span>Components</span></a>
-    <span class="breadcrumb-item is-active">Breadcrumb</span>
+    <ul>
+        <li><a><span class="icon is-small"><i class="fa fa-home"></i></span><span>Bulma</span></a></li>
+        <li><a><span class="icon is-small"><i class="fa fa-book"></i></span><span>Documentation</span></a></li>
+        <li><a><span class="icon is-small"><i class="fa fa-puzzle-piece"></i></span><span>Components</span></a></li>
+        <li class="is-active"><a><span class="icon is-small"><i class="fa fa-thumbs-up"></i></span><span>Breadcrumb</span></a></li>
+    </ul>
 </nav>
 {% endcapture %}
 <div class="example">
@@ -98,10 +111,12 @@ doc-subtab: breadcrumb
 </div>
 {% capture breadcrumb_small_example %}
 <nav class="breadcrumb is-small">
-    <a class="breadcrumb-item">Bulma</a>
-    <a class="breadcrumb-item">Documentation</a>
-    <a class="breadcrumb-item">Components</a>
-    <span class="breadcrumb-item is-active">Breadcrumb</span>
+    <ul>
+        <li><a>Bulma</a></li>
+        <li><a>Documentation</a></li>
+        <li><a>Components</a></li>
+        <li class="is-active"><a>Breadcrumb</a></li>
+    </ul>
 </nav>
 {% endcapture %}
 <div class="example">
@@ -113,10 +128,12 @@ doc-subtab: breadcrumb
 
 {% capture breadcrumb_medium_example %}
 <nav class="breadcrumb is-medium">
-    <a class="breadcrumb-item">Bulma</a>
-    <a class="breadcrumb-item">Documentation</a>
-    <a class="breadcrumb-item">Components</a>
-    <span class="breadcrumb-item is-active">Breadcrumb</span>
+    <ul>
+        <li><a>Bulma</a></li>
+        <li><a>Documentation</a></li>
+        <li><a>Components</a></li>
+        <li class="is-active"><a>Breadcrumb</a></li>
+    </ul>
 </nav>
 {% endcapture %}
 <div class="example">
@@ -128,10 +145,12 @@ doc-subtab: breadcrumb
 
 {% capture breadcrumb_large_example %}
 <nav class="breadcrumb is-large">
-    <a class="breadcrumb-item">Bulma</a>
-    <a class="breadcrumb-item">Documentation</a>
-    <a class="breadcrumb-item">Components</a>
-    <span class="breadcrumb-item is-active">Breadcrumb</span>
+    <ul>
+        <li><a>Bulma</a></li>
+        <li><a>Documentation</a></li>
+        <li><a>Components</a></li>
+        <li class="is-active"><a>Breadcrumb</a></li>
+    </ul>
 </nav>
 {% endcapture %}
 <div class="example">
@@ -149,10 +168,12 @@ doc-subtab: breadcrumb
 </div>
 {% capture breadcrumb_arrow_example %}
 <nav class="breadcrumb has-arrow-separator">
-    <a class="breadcrumb-item">Bulma</a>
-    <a class="breadcrumb-item">Documentation</a>
-    <a class="breadcrumb-item">Components</a>
-    <span class="breadcrumb-item is-active">Breadcrumb</span>
+    <ul>
+        <li><a>Bulma</a></li>
+        <li><a>Documentation</a></li>
+        <li><a>Components</a></li>
+        <li class="is-active"><a>Breadcrumb</a></li>
+    </ul>
 </nav>
 {% endcapture %}
 <div class="example">
@@ -164,10 +185,12 @@ doc-subtab: breadcrumb
 
 {% capture breadcrumb_bullet_example %}
 <nav class="breadcrumb has-bullet-separator">
-    <a class="breadcrumb-item">Bulma</a>
-    <a class="breadcrumb-item">Documentation</a>
-    <a class="breadcrumb-item">Components</a>
-    <span class="breadcrumb-item is-active">Breadcrumb</span>
+    <ul>
+        <li><a>Bulma</a></li>
+        <li><a>Documentation</a></li>
+        <li><a>Components</a></li>
+        <li class="is-active"><a>Breadcrumb</a></li>
+    </ul>
 </nav>
 {% endcapture %}
 <div class="example">
@@ -179,10 +202,12 @@ doc-subtab: breadcrumb
 
 {% capture breadcrumb_dot_example %}
 <nav class="breadcrumb has-dot-separator">
-    <a class="breadcrumb-item">Bulma</a>
-    <a class="breadcrumb-item">Documentation</a>
-    <a class="breadcrumb-item">Components</a>
-    <span class="breadcrumb-item is-active">Breadcrumb</span>
+    <ul>
+        <li><a>Bulma</a></li>
+        <li><a>Documentation</a></li>
+        <li><a>Components</a></li>
+        <li class="is-active"><a>Breadcrumb</a></li>
+    </ul>
 </nav>
 {% endcapture %}
 <div class="example">
@@ -194,10 +219,12 @@ doc-subtab: breadcrumb
 
 {% capture breadcrumb_succeeds_example %}
 <nav class="breadcrumb has-succeeds-separator">
-    <a class="breadcrumb-item">Bulma</a>
-    <a class="breadcrumb-item">Documentation</a>
-    <a class="breadcrumb-item">Components</a>
-    <span class="breadcrumb-item is-active">Breadcrumb</span>
+    <ul>
+        <li><a>Bulma</a></li>
+        <li><a>Documentation</a></li>
+        <li><a>Components</a></li>
+        <li class="is-active"><a>Breadcrumb</a></li>
+    </ul>
 </nav>
 {% endcapture %}
 <div class="example">
