build(css): build minified bundle
adds a minfied css bundle and uses it

closes #642

--- a/docs/_includes/head.html
+++ b/docs/_includes/head.html
@@ -7,7 +7,7 @@
   <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
 
   <link rel="stylesheet" href="{{ site.fontawesome }}">
-  <link rel="stylesheet" href="{{ site.url }}/css/bulma-docs.css">
+  <link rel="stylesheet" href="{{ site.url }}/css/bulma-docs.min.css">
 
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.url }}">
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.url }}">
