Fixed a few minor bugs

--- a/sass/components/modal.sass
+++ b/sass/components/modal.sass
@@ -72,6 +72,9 @@
   &.is-active
     display: flex
 
+.modal-iframe
+  border-radius: $radius-large
+
 .modal-iframe,
 .modal-div
   max-height: calc(100vh - 40px)
