--- a/sass/elements/form.sass
+++ b/sass/elements/form.sass
@@ -124,6 +124,11 @@ $input-radius:              $radius !default
     font-size: 1em
     outline: none
     padding-right: 2.5em
+    // Colors
+    @each $name, $pair in $colors
+      $color: nth($pair, 1)
+      &.is-#{$name}
+        border-color: $color
     &:hover
       border-color: $input-hover-border
     &::-ms-expand
@@ -248,8 +253,6 @@ ul
   &.has-addons
     display: flex
     justify-content: flex-start
-    .checkbox
-      line-height: $button-height
     .button,
     .input,
     .select
@@ -350,8 +353,6 @@ ul
   &.is-grouped
     display: flex
     justify-content: flex-start
-    .checkbox
-      line-height: $button-height
     & > .control
       flex-basis: auto
       flex-shrink: 0
