--- a/sass/layout/hero.sass
+++ b/sass/layout/hero.sass
@@ -34,7 +34,7 @@
     $color-invert: nth($pair, 2)
     &.is-#{$name}
       background-color: $color
-      box-shadow: 0 4px 30px rgba($black, 0.3)
+      box-shadow: 0 0 5px rgba($black, 0.3)
       color: $color-invert
       position: relative
       .title
@@ -116,8 +116,6 @@
 
 .hero
   &.is-primary
-    .hero-head
-      box-shadow: 0 4px 7px rgba($black, 0.1)
     .hero-foot
       background: rgba($black, 0.3)
     .nav
@@ -296,5 +294,6 @@
     &.is-primary
       .nav-logo
         padding-left: 0
-      .nav-searchlogin
+      .nav-searchlogin,
+      .nav-social
         padding-right: 0
