--- a/sass/elements/button.sass
+++ b/sass/elements/button.sass
@@ -206,3 +206,5 @@ $button-shadow-inset: inset 0 1px 2px rgba($black, 0.2) !default
   .is-pulled-right
     float: none
     margin-left: auto
+  input[type="checkbox"]
+    margin: 0
