--- a/sass/elements/table.sass
+++ b/sass/elements/table.sass
@@ -29,9 +29,15 @@ $table-row-even-hover-background: $white-ter !default
     &.is-narrow
       white-space: nowrap
       width: 1%
+    .toggleheight
+      cursor: zoom-in
+      max-height: 3em
+      overflow: hidden
   th
     color: $text-strong
     text-align: left
+    &.has-text-centered
+      text-align: center
     &.has-text-right
       text-align: right
   tr
